# com.castsoftware.uc.oneclick

./: .env  .gitignore  LICENSE  README.md  _.bat  com.castsoftware.uc.oneclick.sln  config.json  install.bat  log.txt  oneClick.bat  pre_install.bat  pyproject.toml  readme.docx  release-notes.md  requirements.txt  rules.xlsx  settings.json
scripts/: AIPdeleteFolderList.txt  HLdeleteFileList.txt  HLdeleteFolderList.txt  ListOfTechnologies.csv  deleteFolderList.txt  example.docx  mycontacts.txt  oneClick.bat
src/: SourceDiscovery.py  cleanup.py  cloc.py  config.py  discoveryReport.py  install.bat  main.py  prep.py  pyproject.toml  runArg.py  sendEmail.py  setup.py  sourceValidation.py  sqlDiscovery.py  unzip.py  util.py
src/analysis/: aip_analysis.py  analysis  analysis.py  highlight  highlight.py  highlight_analysis.py  trackAnalysis.py
src/discovery/: SourceDiscovery.py  cleanup.py  cloc.py  discoveryReport.py  prep.py  sourceValidation.py  sqlDiscovery.py  unzip.py
src/oneclick/: base.py  config.py  configTest.py  exceptions.py  file.properties  main.py  runArg.py  sendEmail.py  setup.py
src/oneclick/analysis/: aip_analysis.py  analysis.py  highlight_analysis.py  runAnalysis.py  trackAnalysis.py
src/oneclick/discovery/: SourceDiscovery.save  cleanup.py  cloc.py  discoveryReport.py  prep.py  profiler.py  sourceValidation.py  sqlDiscovery.py  sqlDiscovery.save  unzip.py
src/scripts/: AIPdeleteFileList.txt  AIPdeleteFolderList.txt  HLdeleteFileList.txt  ListOfTechnologies.csv  message.txt  oneClick.bat
